--- a/todo
+++ b/todo
@@ -1,9 +1,4 @@
-* get candle data (exchange, currency pair, ticker, time-start, time-end)
-* get candle data (exchange, currency pair, ticker, las_n_candles)
-* get_settings (json_struct)
-* set_settings (json_struct)
-* proper execption handling
-* propper  logging
-* docs
 * validators from pydantic 
-* requirements.txt
+* OPENAPI
+* add reference counter to pairs
+* persist config in db
